--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ go:
 
 before_install:
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
-        - @if [ -n "$($TRAVIS_TAG)" ]; then
+        - 'if [ -n "$($TRAVIS_TAG)" ]; then
                 GIT_BRANCH=$TRAVIS_BRANCH
           else
                 GIT_BRANCH=$TRAVIS_TAG
-          fi
+          fi'
 
 install:
           - echo $GIT_COMMIT $GIT_BRANCH
