--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ go:
 before_install:
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
         - 'if [ -n "$($TRAVIS_TAG)" ]; then
-                GIT_BRANCH=$TRAVIS_BRANCH
+                GIT_BRANCH=$TRAVIS_BRANCH;
           else
-                GIT_BRANCH=$TRAVIS_TAG
+                GIT_BRANCH=$TRAVIS_TAG;
           fi'
 
 install:
