--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ go:
         - 1.7.x
 
 before_install:
-        - echo "branch:" $TRAVIS_BRANCH "tag:" $TRAVIS_TAG
+        - echo "branch:" $(TRAVIS_BRANCH) "tag:" $(TRAVIS_TAG)
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
         - 'if [ -n "$($TRAVIS_TAG)" ]; then
-               export GIT_BRANCH=$TRAVIS_BRANCH;
+               export GIT_BRANCH=$(TRAVIS_BRANCH);
           else
-               export GIT_BRANCH=$TRAVIS_TAG;
+               export GIT_BRANCH=$(TRAVIS_TAG);
           fi'
 
 install:
