--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ go:
         - 1.7.x
 
 before_install:
-        - echo "branch:" $(TRAVIS_BRANCH) "tag:" $(TRAVIS_TAG)
+        - echo "branch:" $TRAVIS_BRANCH "tag:" $TRAVIS_TAG;
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
         - 'if [ -n "$($TRAVIS_TAG)" ]; then
                export GIT_BRANCH=$(TRAVIS_BRANCH);
@@ -21,7 +21,7 @@ before_install:
           fi'
 
 install:
-          - echo $GIT_COMMIT $GIT_BRANCH
+          - echo $GIT_COMMIT $GIT_BRANCH;
 script:
         - make build_artifacts
         - make build_docker
