--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ go:
 before_install:
         - echo "branch:" $TRAVIS_BRANCH "tag:" $TRAVIS_TAG;
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
-        - 'if [ -n "$($TRAVIS_TAG)" ]; then
+        - 'if [ -z "${TRAVIS_TAG}" ]; then
                export GIT_BRANCH=$(TRAVIS_BRANCH);
           else
                export GIT_BRANCH=$(TRAVIS_TAG);
