--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,14 @@ services:
 env:
         global:
                 - GIT_COMMIT=$TRAVIS_COMMIT
+                - GIT_BRANCH=$TRAVIS_BRANCH
 language: go
 
 go:
         - 1.7.x
 
 before_install:
-        - echo "branch:" $TRAVIS_BRANCH "tag:" $TRAVIS_TAG;
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
-        - 'if [ -z "${TRAVIS_TAG}" ]; then
-               export GIT_BRANCH=$TRAVIS_BRANCH;
-          else
-               export GIT_BRANCH=$TRAVIS_TAG;
-          fi'
 
 install:
           - echo $GIT_COMMIT $GIT_BRANCH;
