--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
-matrix:
-        - include:
-                - os: osx
-                  sudo: required
-                - os: linux
+os: 
+        - osx
+        - linux
+
+sudo: required
 services:
         - docker
+language: go
+go:
+        - 1.7.x
 env:
   global:
   - GIT_COMMIT=$TRAVIS_COMMIT
   - GIT_BRANCH=$TRAVIS_BRANCH
   - OS=$(uname -s)
-language: go
-go:
-        - 1.7.x
 before_install:
         - docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
 install:
