--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ go:
         - 1.7.x
 
 before_install:
-        - 'if [ "$TARGET" = "LINUX" ]; then 
+        - 'if [ "$TARGET_OS" = "linux" ]; then 
                 docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD";
            fi'
 install:
