--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
         - make test_all
         - make build_artifact
         - 'if [ "$TARGET_OS" = "linux" ]; then
-                make test_docker;
+                make docker_docker;
           fi'
 deploy:
   - provider: releases
