--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 matrix:
   include:
-# DOCKER 
+# DOCKER && LINUX
     - os: linux
       language: go
       go: 1.7.5
@@ -14,6 +14,7 @@ matrix:
           - GIT_COMMIT=$TRAVIS_COMMIT
           - GIT_BRANCH=$TRAVIS_BRANCH
           - TARGET_OS=linux
+# WINDOWS           
     - os: linux
       sudo: false
       language: go
@@ -22,6 +23,7 @@ matrix:
       env:
         global:
          - TARGET_OS=windows
+# MACOS         
     - os: linux
       sudo: false
       language: go
@@ -29,7 +31,11 @@ matrix:
       dist: precise    
       env:
         global:
-         - TARGET_OS=darwin         
+         - TARGET_OS=darwin      
+  exclude:
+    - env:
+        global:
+         - TARGET_OS=windows
          
 before_install:
         - 'if [ "$TARGET_OS" = "linux" ]; then 
