--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,11 @@ clone_folder: c:\gopath\src\github.com\tochka\test-travis
 environment:
   GOPATH: c:\gopath
 
+skip_branch_with_pr: true
+
+pull_requests:
+  do_not_increment_build_number: true
+
 install:  
   - echo %PATH%
   - echo %GOPATH%
