--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ pull_requests:
   do_not_increment_build_number: true
 
 install:  
+  - dir C:\
   - choco install -y mingw
   - dir C:\tools\mingw64
   - set PATH=%GOPATH%\bin;c:\go\bin;C:\tools\mingw64\bin\;c:\MinGW\msys\1.0\bin;%PATH%
