--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,9 +13,8 @@ pull_requests:
   do_not_increment_build_number: true
 
 install:  
-  - C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw-w64.bat
   - dir c:\msys64
-  - set PATH=%GOPATH%\bin;c:\go\bin;C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin\;c:\MinGW\msys\1.0\bin;%PATH%
+  - set PATH=%GOPATH%\bin;c:\go\bin;C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin;c:\MinGW\msys\1.0\bin;%PATH%
   - g++ -v
   - go version
   - mingw32-make get
