--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ pull_requests:
   do_not_increment_build_number: true
 
 install:  
-  - dir c:\msys64
+  - dir c:\msys64\mingw64
   - set PATH=%GOPATH%\bin;c:\go\bin;C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin;c:\MinGW\msys\1.0\bin;%PATH%
   - g++ -v
   - go version
