--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ script:
         - 'if [ "$TARGET_OS" = "linux" ]; then
                 make build_docker;
           fi'
+after_script:
+        - bash <(curl -s https://codecov.io/bash)
 deploy:
   - provider: releases
     api_key:
